tests/baselines/reference/declFileTypeAnnotationParenType.errors.txt
declFileTypeAnnotationParenType.ts(8,29): error TS2872: This kind of expression is always truthy.
declFileTypeAnnotationParenType.ts(9,9): error TS2872: This kind of expression is always truthy.


==== declFileTypeAnnotationParenType.ts (2 errors) ====
    class c {
        private p: string;
    }
    
    var x: (() => c)[] = [() => new c()];
    var y = [() => new c()];
    
    var k: (() => c) | string = (() => new c()) || "";
                                ~~~~~~~~~~~~~~~
!!! error TS2872: This kind of expression is always truthy.
    var l = (() => new c()) || "";
            ~~~~~~~~~~~~~~~
!!! error TS2872: This kind of expression is always truthy.